PROJECT(CCMIO C CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(WIN32)
  IF(MINGW)
    SET(CONFIG_INCLUDE_DIR config/windows-x86-gcc)
    ADD_DEFINITIONS(-DWINDOWS_X86_GCC)
  ELSEIF(MSVC)
    SET(CONFIG_INCLUDE_DIR config/windows-vc.net)
	ADD_DEFINITIONS(-w34100 -w34189 /wd4996 /DWINDOWS_X86)
  ENDIF()
ELSE()
  IF(MINGW)
    SET(CONFIG_INCLUDE_DIR config/windows-x86-gcc)
    ADD_DEFINITIONS(-DWINDOWS_X86_GCC)
  ELSEIF(APPLE)
    SET(CONFIG_INCLUDE_DIR config/i386-apple-darwin8)
    ADD_DEFINITIONS(-D__DARWIN_X11__)
  ELSE()
    SET(CONFIG_INCLUDE_DIR config/linux64_2.4-x86-glibc_2.3.2)
    ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE)
  ENDIF()

ENDIF()

INCLUDE_DIRECTORIES(${CONFIG_INCLUDE_DIR} . include)

# ADD_SUBDIRECTORY(libadf)
ADD_SUBDIRECTORY(libccmio)