CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(gidpost CXX)

SET(GIDPOST_SRCS source/gidpost.cpp source/gidpostInt.cpp)

INCLUDE_DIRECTORIES(source)

SET(GIDPOST_LIBNAME gidpost)

IF(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(GIDPOST_LIBNAME gipostd)
ENDIF(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Debug")

SET(CMAKE_CXX_FLAGS "-Wno-write-strings")

ADD_LIBRARY(${GIDPOST_LIBNAME} STATIC ${GIDPOST_SRCS})

INSTALL(TARGETS ${GIDPOST_LIBNAME}
  ARCHIVE DESTINATION "${LIB_SUFFIX}/${CFS_ARCH_STR}")

INSTALL(FILES
  source/gidpost.h
  DESTINATION include)
