CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(gidpost CXX)

SET(GIDPOST_SRCS source/gidpost.cpp source/gidpostInt.cpp)

INCLUDE_DIRECTORIES(source)

SET(GIDPOST_LIBNAME gidpost)

IF(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(GIDPOST_LIBNAME gipostd)
ENDIF(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Debug")

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "-Wno-write-strings")
ENDIF()

IF(MSVC)
  SET(CMAKE_CXX_FLAGS "/EHsc /D_CRT_SECURE_NO_WARNINGS")
ENDIF()

ADD_LIBRARY(${GIDPOST_LIBNAME} STATIC ${GIDPOST_SRCS})

INSTALL(TARGETS ${GIDPOST_LIBNAME}
  ARCHIVE DESTINATION "${LIB_SUFFIX}/${CFS_ARCH_STR}")

INSTALL(FILES
  source/gidpost.h
  DESTINATION include)
